# rocm-install-on-linux

./: .gitignore  .wordlist.txt  CHANGELOG.md
docs/: conf.py
docs/install/: amdgpu-install.rst  post-install.rst  prerequisites.rst  quick-start.rst  rocm-offline-installer.rst
docs/install/native-install/: index.rst  multi-version-install.rst  ol.rst  ubuntu.rst
docs/install/native-install/includes/: ol-multi-install.rst  rhel-multi-install.rst  sles-multi-install.rst  ubuntu-multi-install.rst
docs/reference/: 3rd-party-support-matrix.rst  install-faq.rst  package-manager-integration.rst  system-requirements.rst  user-kernel-space-compat-matrix.rst
docs/sphinx/: _toc.yml.in  requirements.in  requirements.txt
src/offline-installer/: CMakeLists.txt  README.md  VERSION
src/offline-installer/UI/src/: config.h  create_menu.c  driver_menu.c  extras_menu.c  help_menu.h  install_types.h  rocm_menu.c  rocm_menu.h  rocm_offline_ui.c  summary_menu.c
src/offline-installer/scripts/: offline_init.sh
src/offline-installer/scripts/deb/: create-offline.sh
src/offline-installer/scripts/deb/installer-package/: install.sh
src/offline-installer/scripts/el/: create-offline.sh
src/offline-installer/scripts/el/installer-package/: install.sh
src/offline-installer/scripts/sle/: cleanup-create.sh  create-offline.sh
src/offline-installer/scripts/sle/installer-package/: install.sh
src/offline-installer/tests/: CMakeLists.txt  create-test-driver-only-6.2.4.config  create-test-driver-only-6.3.config  create-test-hip-hiplibsdk-6.2.4.config  create-test-hip-hiplibsdk-6.3.config  create-test-rocm-driver-6.2.4.config  create-test-rocm-driver-6.3.config  create-test-rocm-graphics-6.2.4.config  create-test-rocm-graphics-6.3.config  create-test-rocm-only-6.2.2.config  create-test-rocm-only-6.2.4.config  create-test-rocm-only-6.3.config
